doc - Anhang und Glossar(angefangen)

--- a/BA_argo_doc/BA_ArgoFloats_main.tex
+++ b/BA_argo_doc/BA_ArgoFloats_main.tex
@@ -1,19 +1,19 @@
 \include{preamble}
 
 
-% opening ---------------------------------------------------------------------------------------------------------    
-% 
+% opening ---------------------------------------------------------------------------------------------------------
+%
 %       __...--~~~~~-._   _.-~~~~~--...__
-%     //               `V'               \\ 
-%    //                 |                 \\ 
-%   //__...--~~~~~~-._  |  _.-~~~~~~--...__\\ 
+%     //               `V'               \\
+%    //                 |                 \\
+%   //__...--~~~~~~-._  |  _.-~~~~~~--...__\\
 %  //__.....----~~~~._\ | /_.~~~~----.....__\\
 % ====================\\|//====================
-%                     `---`  
-\begin{document} 
+%                     `---`
+\begin{document}
+\pagenumbering{roman}
 \pagestyle{plain}
-\setcounter{page}{-1}
-\pagenumbering{Roman} 
+%\setcounter{page}{-1}
 \bibliographystyle{alpha}
 \include{titlepage}
 \newpage
@@ -28,7 +28,7 @@
 
 \pagebreak
 \pagestyle{scrheadings}
-\pagenumbering{arabic} 
+\pagenumbering{arabic}
 \setcounter{page}{1}
 \input{einleitung}
 %\include{datengrundlage}
@@ -41,4 +41,4 @@
 \include{anhang}
 \include{literatur}
 
-\end{document} 
+\end{document}
