--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -33,13 +33,13 @@ Im Abschluss findet eine Präsentation des entwickelten Prototypen statt. Dabei 
 \subsection{Existierende Lösungen}
 
 
-Das Joint Technical Commission for Oceanography and Marine Meteorology (JCOMM) bietet mit
+Das \gls{JCOMM} bietet mit
 \url{jcommops.org} eine Grundlage für die wissenschaftliche Arbeit unter anderem mit den von Argo gesammelten Daten. Neben der Darstellung von Karten erfährt der Nutzer hier, von Sensordaten über den Bautyp der jeweiligen Boje alles, was die Bojen zu erzählen haben. Daneben werden über diese Plattform auch redaktionelle Reports veröffentlicht, um der Leserschaft ein Bild der aktuellen Lage unserer Weltmeere zu vermitteln.
 
-Zwar bietet die Plattform durch ihre kartenbasierte explorative Darstellung ein ähnliches Angebot, wie es in der hier zu erstellenden Applikation geben soll. Die Fülle der Parameter erfordert vom Benutzer aber die Bereitschaft, sich vertieft in die Materie einzuarbeiten. Damit richtet sich das Angebot des Global Ocean Observing Systems an Wissenschaftler und Journalisten. Diesen dient sie als eine hervorragende Datengrundlage für deren Veröffentlichungen. Ein Benutzer aus der für diese Arbeit definierten Zielgruppe wird von einem derartigen Angebot wohl eher abgeschreckt sein, bevor er dessen Vorteile für sich erarbeitet.
+Zwar bietet die Plattform durch ihre kartenbasierte explorative Darstellung ein ähnliches Angebot, wie es in der hier zu erstellenden Applikation geben soll. Die Fülle der Parameter erfordert vom Benutzer aber die Bereitschaft, sich vertieft in die Materie einzuarbeiten. Damit richtet sich das Angebot des \gls{GOOS} an Wissenschaftler und Journalisten. Diesen dient sie als eine hervorragende Datengrundlage für deren Veröffentlichungen. Ein Benutzer aus der für diese Arbeit definierten Zielgruppe wird von einem derartigen Angebot wohl eher abgeschreckt sein, bevor er dessen Vorteile für sich erarbeitet.
 \\
 
-Das "`Data Selection and Visualization Tool"' der Coriolis GDAC  (siehe \cite{ArgoDataSelection}) ermöglicht den Download von, nach verschiedenen Filterkriterien ausgewählten, Datensätzen. Über einen Betrachter können Werte einer spezifischen Treibboje angesehen werden.
+Das \gls{GDAC} der Coriolis (siehe \cite{ArgoDataSelection}) ermöglicht den Download von, nach verschiedenen Filterkriterien ausgewählten, Datensätzen. Über einen Betrachter können Werte einer spezifischen Treibboje angesehen werden.
 Die primäre Aufgabenstellung dieser Plattform ist das Extrahieren der Daten, um diese in einer wissenschaftlichen Publikation verwenden zu können. Neben der akademischen Verwendung müsste ein Benutzer aber auch hier viel Neugierde und Zeit für die Einarbeitung in das Thema mitbringen, um aus den angebotenen Daten einen Mehrwert für sich zu generieren.
 
 
