--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -169,7 +169,12 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 
 
 \paragraph{\texttt{Statement 1:} "`Ich kann mir gut vorstellen, ArgoData regelmäßig zu nutzen."'}
-    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten sind hier sehr breit gestreut. In insgesamt 4 von 5 Antwortmöglichkeiten wurden Antworten gegeben. Das Maximum lag mit 4 Antworten in der Antwort 4. Der Median liegt bei 3, der Durchschnitt zwischen 2.5 und 3. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. 
+    
+    Die Antworten weisen eine breite Streuung auf. 
+    In insgesamt 4 von 5 Antwortmöglichkeiten wurden Antworten gegeben. 
+    4 von 12 Personen bewertenden das Statement mit einem Wert von 4.
+    Der Median liegt bei 3, der Durchschnitt zwischen 2.5 und 3. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
 
  \paragraph{\texttt{Statement 2:} "`Ich empfinde ArgoData als unnötig komplex."'}
     In dieser Frage, bildet sich die Reduktion der Komplexität ab. Dire Antworten finden sich hier im bereich 1 bis 3. Das Maximum liegt mit einem Wert von 7 in der Antwort 1. Der Median liegt bei 1, das arithmetische Mittel bei knapp über 1.5. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
